--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ dependencies:
     - python=2.7
     - fiona
     - folium
-    - gdal
     - geojson
-    - pandas
     - jupyter
+    - pandas
+    - pygc
