Update to conda-forge and python3.5

--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,8 @@
 name: assets_map
 channels:
-    - ioos
+    - conda-forge
 dependencies:
-    - python=2.7
+    - python=3.5
     - fiona
     - folium
     - geojson
